--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -4,13 +4,21 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:FileManager.ViewModels"
+        xmlns:cmd="clr-namespace:FileManager.Infrastructure.Commands"
         xmlns:local="clr-namespace:FileManager"
         Title="{Binding Title}" 
         Height="450" Width="800">
     <Window.DataContext>
         <vm:MainWindowViewModel/>
     </Window.DataContext>
-    <Grid>
-        
-    </Grid>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Выход" Command="{Binding CloseApplicationCommand}"/>
+            </MenuItem>
+            <MenuItem Header="Помощь">
+                 <MenuItem Header="О программе"/>
+            </MenuItem>
+        </Menu>
+    </DockPanel>
 </Window>
