--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" mc:Ignorable="d"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:fa="http://schemas.fontawesome.com/icons/"
         xmlns:vm="clr-namespace:FileManager.ViewModels"
         xmlns:cmd="clr-namespace:FileManager.Infrastructure.Commands"
         xmlns:local="clr-namespace:FileManager"
@@ -17,8 +18,15 @@
                 <MenuItem Header="Выход" Command="{Binding CloseApplicationCommand}"/>
             </MenuItem>
             <MenuItem Header="Помощь">
-                 <MenuItem Header="О программе"/>
+                <MenuItem Header="О программе"/>
             </MenuItem>
         </Menu>
+        <Grid>
+            <fa:ImageAwesome Icon="Solid_ArrowLeft" Width="20" Height="15" Margin="10,12,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.48,1.072"/>
+            <fa:ImageAwesome Icon="Solid_ArrowRight" Width="20" Height="15" Margin="40,12,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.507,1.205"/>
+            <TextBox Margin="70,10,105,0" Height="20" VerticalAlignment="Top" FontSize="14"/>
+            <Button Content="Перейти" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="20" Width="90"/>
+            <ListBox Margin="10,40,10,10"/>
+        </Grid>
     </DockPanel>
 </Window>
