--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:fa="http://schemas.fontawesome.com/icons/"
         xmlns:vm="clr-namespace:FileManager.ViewModels"
+        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:cmd="clr-namespace:FileManager.Infrastructure.Commands"
         xmlns:local="clr-namespace:FileManager"
         Title="{Binding Title}" 
@@ -24,14 +25,36 @@
         <Grid>
             <fa:ImageAwesome Icon="Solid_ArrowLeft" Width="20" Height="15" Margin="10,12,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.48,1.072"/>
             <fa:ImageAwesome Icon="Solid_ArrowRight" Width="20" Height="15" Margin="40,12,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.507,1.205"/>
-            <TextBox Margin="70,10,105,0" Height="20" VerticalAlignment="Top" FontSize="14" Text="{Binding Path}"/>
-            <Button Content="Перейти" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="20" Width="90" Command="{Binding GetItemInfoCommand}"/>
-            <DataGrid Margin="10,40,10,10" ColumnWidth="100*" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" ItemsSource="{Binding ItemsInfo}" GridLinesVisibility="None">
+            <TextBox Margin="70,10,10,0" Height="20" VerticalAlignment="Top" FontSize="14" Text="{Binding PathToItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                <TextBox.InputBindings>
+                    <KeyBinding Command="{Binding OpenSelectedItemCommand}" Gesture="Enter"/>
+                </TextBox.InputBindings>
+            </TextBox>
+            <DataGrid 
+                x:Name="DataGrid"
+                Margin="10,40,10,10" 
+                ColumnWidth="100*" 
+                AutoGenerateColumns="False" 
+                CanUserAddRows="False" 
+                CanUserDeleteRows="False" 
+                CanUserResizeRows="False"
+                GridLinesVisibility="None" 
+                HeadersVisibility="All"
+                IsReadOnly="True"
+                ItemsSource="{Binding ItemsInfo, UpdateSourceTrigger=PropertyChanged}">
+
+                <!--<b:Interaction.Triggers>
+                    <b:EventTrigger EventName="MouseDoubleClick">
+                        <b:InvokeCommandAction Command="{Binding OpenSelectedItemCommand}">
+                        </b:InvokeCommandAction>
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>-->
+
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Имя" Binding="{Binding Name}"/>
-                    <DataGridTextColumn Header="Дата изменения" Binding="{Binding DateChanged}" />
-                    <DataGridTextColumn Header="Тип" Binding="{Binding Type}"/>
-                    <DataGridTextColumn Header="Размер" Binding="{Binding Size}"/>
+                    <DataGridTextColumn Header="Имя" Binding="{Binding ItemName}"/>
+                    <DataGridTextColumn Header="Дата изменения" Binding="{Binding ItemDateChanged}" />
+                    <DataGridTextColumn Header="Тип" Binding="{Binding ItemType}"/>
+                    <DataGridTextColumn Header="Размер" Binding="{Binding ItemSize}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
