--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -45,7 +45,7 @@
 
                 <!--<b:Interaction.Triggers>
                     <b:EventTrigger EventName="MouseDoubleClick">
-                        <b:InvokeCommandAction Command="{Binding OpenSelectedItemCommand}">
+                        <b:InvokeCommandAction Command="{Binding OpenSelectedItemCommand, UpdateSourceTrigger=PropertyChanged}">
                         </b:InvokeCommandAction>
                     </b:EventTrigger>
                 </b:Interaction.Triggers>-->
