--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -26,7 +26,7 @@
             <fa:ImageAwesome Icon="Solid_ArrowLeft" Width="20" Height="16" Margin="10,12,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.48,1.072"/>
             <TextBox Margin="40,10,10,0" Height="20" VerticalAlignment="Top" FontSize="14" Text="{Binding PathToItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <TextBox.InputBindings>
-                    <KeyBinding Command="{Binding UpdateItemsInfoFromPathCommand}" Gesture="Enter"/>
+                    <KeyBinding Command="{Binding UpdateItemsInfoFromPathCommand}" CommandParameter="{Binding PathToItem, Mode=TwoWay}" Gesture="Enter"/>
                 </TextBox.InputBindings>
             </TextBox>
             <DataGrid 
@@ -40,14 +40,17 @@
                 GridLinesVisibility="None" 
                 HeadersVisibility="All"
                 IsReadOnly="True"
-                ItemsSource="{Binding ItemsInfo, UpdateSourceTrigger=PropertyChanged}">
+                ItemsSource="{Binding ItemsInfo, UpdateSourceTrigger=PropertyChanged}"
+                SelectedItem="{Binding SelectedItem}">
 
-                <!--<b:Interaction.Triggers>
+                <b:Interaction.Triggers>
                     <b:EventTrigger EventName="MouseDoubleClick">
-                        <b:InvokeCommandAction Command="{Binding OpenSelectedItemCommand, UpdateSourceTrigger=PropertyChanged}">
+                        <b:InvokeCommandAction 
+                            Command="{Binding OpenSelectedItemCommand, UpdateSourceTrigger=PropertyChanged}"
+                            CommandParameter="{Binding SelectedItem, UpdateSourceTrigger=PropertyChanged}">
                         </b:InvokeCommandAction>
                     </b:EventTrigger>
-                </b:Interaction.Triggers>-->
+                </b:Interaction.Triggers>
 
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Имя" Binding="{Binding itemName}"/>
