--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -23,10 +23,11 @@
             </MenuItem>
         </Menu>
         <Grid>
-            <fa:ImageAwesome Icon="Solid_ArrowLeft" Width="20" Height="16" Margin="10,12,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.48,1.072"/>
-            <TextBox Margin="40,10,10,0" Height="20" VerticalAlignment="Top" FontSize="14" Text="{Binding PathToItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <Button Content="Назад" Margin="10,10,0,0" VerticalAlignment="Top" Command="{Binding PathBackCommand}" HorizontalAlignment="Left" Width="45"/>
+
+            <TextBox Margin="60,10,10,0" Height="20" VerticalAlignment="Top" FontSize="14" Text="{Binding PathToItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <TextBox.InputBindings>
-                    <KeyBinding Command="{Binding UpdateItemsInfoFromPathCommand, UpdateSourceTrigger=PropertyChanged}" Gesture="Enter"/>
+                    <KeyBinding Command="{Binding UpdateItemsInfoFromPathCommand, IsAsync=True}" Gesture="Enter"/>
                 </TextBox.InputBindings>
             </TextBox>
             <DataGrid 
@@ -40,14 +41,14 @@
                 GridLinesVisibility="None" 
                 HeadersVisibility="All"
                 IsReadOnly="True"
-                ItemsSource="{Binding ItemsInfo, UpdateSourceTrigger=PropertyChanged}"
+                ItemsSource="{Binding ItemsInfo}"
                 SelectedItem="{Binding SelectedItem}">
 
                 <b:Interaction.Triggers>
                     <b:EventTrigger EventName="MouseDoubleClick">
                         <b:InvokeCommandAction 
-                            Command="{Binding OpenSelectedItemCommand, UpdateSourceTrigger=PropertyChanged}"
-                            CommandParameter="{Binding SelectedItem, UpdateSourceTrigger=PropertyChanged}">
+                            Command="{Binding OpenSelectedItemCommand}"
+                            CommandParameter="{Binding SelectedItem}">
                         </b:InvokeCommandAction>
                     </b:EventTrigger>
                 </b:Interaction.Triggers>
@@ -56,7 +57,7 @@
                     <DataGridTextColumn Header="Имя" Binding="{Binding itemName}"/>
                     <DataGridTextColumn Header="Дата изменения" Binding="{Binding itemDateChanged}" />
                     <DataGridTextColumn Header="Тип" Binding="{Binding itemType}"/>
-                    <DataGridTextColumn Header="Размер" Binding="{Binding itemSize}"/>
+                    <DataGridTextColumn Header="Размер" Binding="{Binding itemSize.Item[0]}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
