Косметическое исправление datagrid.

--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -38,7 +38,7 @@
                 CanUserDeleteRows="False" 
                 CanUserResizeRows="False"
                 GridLinesVisibility="None" 
-                HeadersVisibility="All"
+                HeadersVisibility="Column"
                 ItemsSource="{Binding ItemsInfo, UpdateSourceTrigger=PropertyChanged}"
                 SelectedItem="{Binding SelectedItem}"
                 IsEnabled="{Binding IsDataGridEnabled}">
